--- a/_layouts/search.html
+++ b/_layouts/search.html
@@ -77,7 +77,7 @@
 
         <div>
             <div id="table-of-contents">
-                {{ content | toc_only }}
+                {% include toc.html html=content %}
             </div>
             <div id="markdown-content">
                 {{ content | inject_anchors }}
