--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -105,7 +105,7 @@
         
           var query = document.getElementById('lunrsearch').value;
           if (query.trim() !== '') {
-            window.location.href = '/search?query=' + encodeURIComponent(query);
+            window.location.href = '{{ site.baseurl }}/search?query=' + encodeURIComponent(query);
           }
         });
     </script>
